[gd_scene load_steps=8 format=3 uid="uid://cn6ktlamgi5d"]

[ext_resource type="Script" path="res://scripts/asteroids_game.gd" id="1_xrqiq"]
[ext_resource type="Script" path="res://scripts/asteroids_manager.gd" id="2_cwuyy"]
[ext_resource type="FontFile" uid="uid://b42prwa756wip" path="res://fonts/RobotoMono-VariableFont_wght.ttf" id="3_tvplo"]
[ext_resource type="Theme" uid="uid://bxakjwkc4gbrj" path="res://themes/main_menu_theme.tres" id="4_edofo"]
[ext_resource type="PackedScene" uid="uid://cbqrvb1pn3bv0" path="res://scenes/pause_menu.tscn" id="5_t8x58"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qu4ki"]
size = Vector2(40, 40)

[sub_resource type="Curve2D" id="Curve2D_yt4y8"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 40, 40, 0, 0, 0, 0, 40, 680, 0, 0, 0, 0, 1240, 680, 0, 0, 0, 0, 1240, 40, 0, 0, 0, 0, 40, 40)
}
point_count = 5

[node name="AsteroidsWorld" type="Node2D"]
script = ExtResource("1_xrqiq")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1282.0
offset_bottom = 720.0
color = Color(0.0923971, 0.0923971, 0.0923971, 1)

[node name="SpawnBox" type="Area2D" parent="."]
position = Vector2(640, 360)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnBox"]
shape = SubResource("RectangleShape2D_qu4ki")

[node name="AsteroidsManager" type="Node2D" parent="."]
script = ExtResource("2_cwuyy")

[node name="AsteroidSpawnPath" type="Path2D" parent="AsteroidsManager"]
curve = SubResource("Curve2D_yt4y8")

[node name="PathFollow2D" type="PathFollow2D" parent="AsteroidsManager/AsteroidSpawnPath"]
position = Vector2(40, 40)
rotation = 1.5708

[node name="GUI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40

[node name="RespawnTimer" type="Label" parent="GUI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Respawning: 0.0"

[node name="Score" type="Label" parent="GUI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_tvplo")
text = "Score: 0"

[node name="Lives" type="Label" parent="GUI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_tvplo")
text = "Lives: 3"

[node name="GameOverMenu" type="PanelContainer" parent="GUI"]
visible = false
anchors_preset = -1
anchor_left = 0.31
anchor_top = 0.296
anchor_right = 0.685
anchor_bottom = 0.737
offset_left = -1.79999
offset_top = -1.12
offset_right = 0.199951
offset_bottom = 0.359985
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_edofo")

[node name="MarginContainer" type="MarginContainer" parent="GUI/GameOverMenu"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Label" type="Label" parent="GUI/GameOverMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Game Over"

[node name="TryAgainButton" type="Button" parent="GUI/GameOverMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Try Again"

[node name="MainMenuButton" type="Button" parent="GUI/GameOverMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Main Menu"

[node name="PauseMenu" parent="GUI" instance=ExtResource("5_t8x58")]

[connection signal="area_entered" from="SpawnBox" to="." method="_on_spawn_box_area_entered"]
[connection signal="area_exited" from="SpawnBox" to="." method="_on_spawn_box_area_exited"]
[connection signal="level_cleared" from="AsteroidsManager" to="." method="_on_asteroids_manager_level_cleared"]
[connection signal="player_scored" from="AsteroidsManager" to="." method="_on_asteroids_manager_player_scored"]
[connection signal="pressed" from="GUI/GameOverMenu/MarginContainer/TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="GUI/GameOverMenu/MarginContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
